Update translation - 103557000 (#3496) 2514976c9c8bc7bc3a6a5988b06e654397d65d78

--- a/ar/request-ppe/index.html
+++ b/ar/request-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الحصول على معدات الوقاية الشخصية</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:14 ص الساعة 17 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;6:56 م الساعة 26 فبراير 2021</p>
           
         </div>
       </div>
@@ -221,7 +221,7 @@
 
 
 
-<ul><li>قلل التعرض عن طريق الضم<ul><li>أجهزة التحكم في المرور مثل الحواجز الزجاجية الشبكية، أنظمة التهوية المحسنة</li><li>ممارسات العمل الآمن مثل تعديل أنشطة الأعمال التجارية لزيادة التباعد الجسدي بين الموظفين</li></ul></li><li>اقرأ <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/guidance-business-response.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fspecific-groups%2Fguidance-business-response.html">الإرشادات الموجهة للشركات وأصحاب الأعمال المتصدين لفيروس كورونا 2019</a></li><li>لا تحاول الحصول على معدات الوقاية الشخصية المستخدمة صناعيًا أو طبيًا للعمال غير الأساسيين. إن معدات الوقاية الشخصية تشتد الحاجة إليها للوظائف ذات الأولوية العالية. إن القناعات الجراحية أو كمامات N95 هي إمدادات حيوية لا غنى عنها لذا يجب المحافظة عليها للعاملين في مجال الرعاية الصحية.</li><li>وبدلاً من ذلك استخدم أقنعة الوجه القماشية البسيطة. الجميع <a href="/ar/masks-and-ppe/">يجب عليه ارتداء قناع أو غطاء للوجه</a> عندما يكونون خارج المنزل. الاستثناءات محدودة.</li><li>إذا كنت لا تستطيع شراء أقنعة الوجه القماشية، يمكنك صنعها من المواد المتوفرة لديك بتكلفة منخفضة. اتبع إرشادات مركز مكافحة الأمراض والوقاية منها حول<a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html"> كيفية صناعة الأقنعة القماشية واستخدامها</a>.</li></ul>
+<ul><li>قلل التعرض عن طريق الضم<ul><li>أجهزة التحكم في المرور مثل الحواجز الزجاجية الشبكية، <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Interim-Guidance-for-Ventilation-Filtration-and-Air-Quality-in-Indoor-Environments.aspx">أنظمة التهوية المحسنة</a></li><li>ممارسات العمل الآمن مثل تعديل أنشطة الأعمال التجارية لزيادة التباعد الجسدي بين الموظفين</li></ul></li><li>اقرأ <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/guidance-business-response.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fspecific-groups%2Fguidance-business-response.html">الإرشادات الموجهة للشركات وأصحاب الأعمال المتصدين لفيروس كورونا 2019</a></li><li>لا تحاول الحصول على معدات الوقاية الشخصية المستخدمة صناعيًا أو طبيًا للعمال غير الأساسيين. إن معدات الوقاية الشخصية تشتد الحاجة إليها للوظائف ذات الأولوية العالية. إن القناعات الجراحية أو كمامات N95 هي إمدادات حيوية لا غنى عنها لذا يجب المحافظة عليها للعاملين في مجال الرعاية الصحية.</li><li>وبدلاً من ذلك استخدم أقنعة الوجه القماشية البسيطة. الجميع <a href="/ar/masks-and-ppe/">يجب عليه ارتداء قناع أو غطاء للوجه</a> عندما يكونون خارج المنزل. الاستثناءات محدودة.</li><li>إذا كنت لا تستطيع شراء أقنعة الوجه القماشية، يمكنك صنعها من المواد المتوفرة لديك بتكلفة منخفضة. اتبع إرشادات مركز مكافحة الأمراض والوقاية منها حول<a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html"> كيفية صناعة الأقنعة القماشية واستخدامها</a>.</li></ul>
 
 
 
