--- a/es/request-ppe/index.html
+++ b/es/request-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Obtenga PPE</h1>
           
-            <p class="small-text">Última actualización&nbsp;17 de febrero de 2021 a las 9:14 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;26 de febrero de 2021 a las 6:56 p. m.</p>
           
         </div>
       </div>
@@ -221,7 +221,7 @@
 
 
 
-<ul><li>Reduzca la exposición incorporando<ul><li>controles de barrera como barreras de Plexiglass y mejores sistemas de ventilación</li><li>prácticas de trabajo seguro, como ajustar las operaciones comerciales para aumentar el espacio físico entre los empleados</li></ul></li><li>Lea la <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/guidance-business-response.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fspecific-groups%2Fguidance-business-response.html">guía para empresas y empleadores que responden a la enfermedad del coronavirus 2019</a>.</li><li>No intente obtener PPE de uso médico o industrial para trabajadores no esenciales. Dicho PPE se requiere para funciones de mayor prioridad. Las mascarillas quirúrgicas y los respiradores N95 son suministros críticos reservados para el personal sanitario.</li><li>En su lugar, use mascarillas de tela simples. Todos <a href="/es/masks-and-ppe/">deben usar una mascarilla o una cubierta facial</a> cuando estén fuera de su hogar. Las excepciones son limitadas.</li><li>Si no puede comprar mascarillas de tela, puede hacerlas con materiales comunes a bajo costo. Siga las <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html">orientaciones de los CDC</a> sobre cómo hacer y usar mascarillas de tela.</li></ul>
+<ul><li>Reduzca la exposición incorporando<ul><li>controles de barrera como barreras de Plexiglass y <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Interim-Guidance-for-Ventilation-Filtration-and-Air-Quality-in-Indoor-Environments.aspx">mejores sistemas de ventilación</a></li><li>prácticas de trabajo seguro, como ajustar las operaciones comerciales para aumentar el espacio físico entre los empleados</li></ul></li><li>Lea la <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/guidance-business-response.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fspecific-groups%2Fguidance-business-response.html">guía para empresas y empleadores que responden a la enfermedad del coronavirus 2019</a>.</li><li>No intente obtener PPE de uso médico o industrial para trabajadores no esenciales. Dicho PPE se requiere para funciones de mayor prioridad. Las mascarillas quirúrgicas y los respiradores N95 son suministros críticos reservados para el personal sanitario.</li><li>En su lugar, use mascarillas de tela simples. Todos <a href="/es/masks-and-ppe/">deben usar una mascarilla o una cubierta facial</a> cuando estén fuera de su hogar. Las excepciones son limitadas.</li><li>Si no puede comprar mascarillas de tela, puede hacerlas con materiales comunes a bajo costo. Siga las <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html">orientaciones de los CDC</a> sobre cómo hacer y usar mascarillas de tela.</li></ul>
 
 
 
