--- a/zh-hans/request-ppe/index.html
+++ b/zh-hans/request-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>获取PPE</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月17日, 上午9:14</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月26日, 下午6:56</p>
           
         </div>
       </div>
@@ -221,7 +221,7 @@
 
 
 
-<ul><li>通过增加供应减少暴露<ul><li>屏障控制，例如有机玻璃屏障，改进的通风系统</li><li>实行安全的工作方式，如调整业务操作，增加员工之间的身体距离</li></ul></li><li>阅读<a href="https://www.cdc.gov/coronavirus/2019-ncov/community/guidance-business-response.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fspecific-groups%2Fguidance-business-response.html">为商业及雇主提供的新型冠状病毒应对指引</a></li><li>切勿尝试为非必要工作者获取医疗或工业级别使用的PPE。此类PPE需要供优先级更高的工作者使用。外科口罩和N95口罩是保留给医务人员的重要用品。</li><li>作为替代，请使用简易布口罩。所有人在户外时都<a href="/zh-hans/masks-and-ppe/">必须佩戴口罩或面罩</a>。有少数例外情况。</li><li>如果您无法购买布口罩，则可以用常见材料制作低成本的口罩。请遵循CDC发布的关于<a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html">如何制作和使用布口罩</a>的指引。</li></ul>
+<ul><li>通过增加供应减少暴露<ul><li>屏障控制，例如有机玻璃屏障，<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Interim-Guidance-for-Ventilation-Filtration-and-Air-Quality-in-Indoor-Environments.aspx">改进的通风系统</a></li><li>实行安全的工作方式，如调整业务操作，增加员工之间的身体距离</li></ul></li><li>阅读<a href="https://www.cdc.gov/coronavirus/2019-ncov/community/guidance-business-response.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fspecific-groups%2Fguidance-business-response.html">为商业及雇主提供的新型冠状病毒应对指引</a></li><li>切勿尝试为非必要工作者获取医疗或工业级别使用的PPE。此类PPE需要供优先级更高的工作者使用。外科口罩和N95口罩是保留给医务人员的重要用品。</li><li>作为替代，请使用简易布口罩。所有人在户外时都<a href="/zh-hans/masks-and-ppe/">必须佩戴口罩或面罩</a>。有少数例外情况。</li><li>如果您无法购买布口罩，则可以用常见材料制作低成本的口罩。请遵循CDC发布的关于<a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html">如何制作和使用布口罩</a>的指引。</li></ul>
 
 
 
