--- a/tl/request-ppe/index.html
+++ b/tl/request-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Kumuha ng Personal na Pamprotektang Kagamitan (Personal Protective Equipment, PPE)</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 17, 2021 sa 9:14 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 26, 2021 sa 6:56 PM</p>
           
         </div>
       </div>
@@ -221,7 +221,7 @@
 
 
 
-<ul><li>Bawasan ang pagkakalantad sa pamamagitan ng pagdaragdag ng<ul><li>Mga pangkontrol na harang gaya ng mga harang na gawa sa Plexiglass, pinahusay na ventilation system</li><li>Mga kagawian para sa ligtas na pagtatrabaho, gaya ng pagsasaayos sa mga operasyon ng negosyo para mapalawak ang pisikal na distansya sa pagitan ng mga tao</li></ul></li><li>Basahin ang <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/guidance-business-response.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fspecific-groups%2Fguidance-business-response.html">Gabay para sa Mga Negosyo at Employer na Tumutugon sa Coronavirus Disease 2019</a></li><li>Huwag subukang kumuha ng PPE na para sa medikal o industriyal na paggamit para sa hindi mahahalagang manggagawa. Ang ganitong PPE ay kinakailangan para sa mga pagpapatakbong nasa mas mataas na priyoridad. Ang mga surgical mask at N95 respirator ay mahahalagang supply na nakareserba para sa mga manggagawa sa pangangalagang pangkalusugan.</li><li>Sa halip, gumamit ng mga simpleng face mask na gawa sa tela. Ang lahat ay <a href="/tl/masks-and-ppe/">dapat magsuot ng mask o takip sa mukha</a> kapag nasa labas ng kanilang bahay. Limitado ang mga pagbubukod.</li><li>Kung hindi ka makakabili ng mga face mask na gawa sa tela, puwede kang gumawa ng mga ito mula sa mga karaniwang murang materyal. Sundin ang gabay ng CDC sa<a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html"> paggawa at paggamit ng mga face mask na gawa sa tela</a>.</li></ul>
+<ul><li>Bawasan ang pagkakalantad sa pamamagitan ng pagdaragdag ng<ul><li>Mga pangkontrol na harang gaya ng mga harang na gawa sa Plexiglass, <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Interim-Guidance-for-Ventilation-Filtration-and-Air-Quality-in-Indoor-Environments.aspx">pinahusay na ventilation system</a></li><li>Mga kagawian para sa ligtas na pagtatrabaho, gaya ng pagsasaayos sa mga operasyon ng negosyo para mapalawak ang pisikal na distansya sa pagitan ng mga tao</li></ul></li><li>Basahin ang <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/guidance-business-response.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fspecific-groups%2Fguidance-business-response.html">Gabay para sa Mga Negosyo at Employer na Tumutugon sa Coronavirus Disease 2019</a></li><li>Huwag subukang kumuha ng PPE na para sa medikal o industriyal na paggamit para sa hindi mahahalagang manggagawa. Ang ganitong PPE ay kinakailangan para sa mga pagpapatakbong nasa mas mataas na priyoridad. Ang mga surgical mask at N95 respirator ay mahahalagang supply na nakareserba para sa mga manggagawa sa pangangalagang pangkalusugan.</li><li>Sa halip, gumamit ng mga simpleng face mask na gawa sa tela. Ang lahat ay <a href="/tl/masks-and-ppe/">dapat magsuot ng mask o takip sa mukha</a> kapag nasa labas ng kanilang bahay. Limitado ang mga pagbubukod.</li><li>Kung hindi ka makakabili ng mga face mask na gawa sa tela, puwede kang gumawa ng mga ito mula sa mga karaniwang murang materyal. Sundin ang gabay ng CDC sa<a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html"> paggawa at paggamit ng mga face mask na gawa sa tela</a>.</li></ul>
 
 
 
@@ -261,7 +261,7 @@
 
 
 
-<p>Ang pangunahing priyoridad ng lokal na pamahalaan ay ang tiyaking may PPE ang mga lokal na mahahalagang manggagawa para mapabagal ang pagkalat ng COVID-19. Pinapangasiwaan ng lokal na pamahalaan ang pagbili at pamamahagi ng pang-emergency na PPE sa kanilang lugar. Kapag nalampasan ng demand ang supply, dapat silang makipag-ugnayan sa mga pagpapatakbo sa emergency sa kanilang rehiyon.</p>
+<p>Ang pangunahing priyoridad ng lokal na pamahalaan ay ang tiyaking may PPE ang lokal na mahahalagang manggagawa para mapabagal ang pagkalat ng COVID-19. Pinapangasiwaan ng lokal na pamahalaan ang pagbili at pamamahagi ng pang-emergency na PPE sa kanilang lugar. Kapag nalampasan ng demand ang supply, dapat silang makipag-ugnayan sa mga pagpapatakbo sa emergency sa kanilang rehiyon.</p>
 
 
 
