--- a/zh-hant/request-ppe/index.html
+++ b/zh-hant/request-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>獲取PPE</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月17日, 上午9:14</p>
+            <p class="small-text">最近更新&nbsp;2021年2月26日, 下午6:56</p>
           
         </div>
       </div>
@@ -221,7 +221,7 @@
 
 
 
-<ul><li>通過加裝以下項目來減少接觸<ul><li>屏障控制，如有機玻璃屏障、改進的通風系統。</li><li>實行安全的工作方式，如調整業務操作，增加員工之間的身體距離</li></ul></li><li>閱讀<a href="https://www.cdc.gov/coronavirus/2019-ncov/community/guidance-business-response.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fspecific-groups%2Fguidance-business-response.html">為商業及雇主提供的新型冠狀病毒應對指引</a></li><li>切勿試圖為非必要的工作人員購買醫療或工業用途的PPE。此類PPE需要供優先級更高的工作者使用。外科口罩和N95口罩是保留給醫務人員的重要用品。</li><li>作為替代，請使用簡易布口罩。所有人在戶外時都<a href="/zh-hant/masks-and-ppe/">必須佩戴口罩或面罩</a>。有少數例外情況。</li><li>如果您無法購買布口罩，則可以用常見材料製作低成本的口罩。請遵循CDC發佈的關於<a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html">如何製作和使用布口罩</a>的指引。</li></ul>
+<ul><li>通過加裝以下項目來減少接觸<ul><li>屏障控制，如有機玻璃屏障、<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Interim-Guidance-for-Ventilation-Filtration-and-Air-Quality-in-Indoor-Environments.aspx">改進的通風系統</a></li><li>實行安全的工作方式，如調整業務操作，增加員工之間的身體距離</li></ul></li><li>閱讀<a href="https://www.cdc.gov/coronavirus/2019-ncov/community/guidance-business-response.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fspecific-groups%2Fguidance-business-response.html">為商業及雇主提供的新型冠狀病毒應對指引</a></li><li>切勿試圖為非必要的工作人員購買醫療或工業用途的PPE。此類PPE需要供優先級更高的工作者使用。外科口罩和N95口罩是保留給醫務人員的重要用品。</li><li>作為替代，請使用簡易布口罩。所有人在戶外時都<a href="/zh-hant/masks-and-ppe/">必須佩戴口罩或面罩</a>。有少數例外情況。</li><li>如果您無法購買布口罩，則可以用常見材料製作低成本的口罩。請遵循CDC發佈的關於<a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html">如何製作和使用布口罩</a>的指引。</li></ul>
 
 
 
