Update translation - 103560051 (#3499) b7abcf2e2fa085f26b5c5a460f3c0d3184682810

--- a/ar/contracts/index.html
+++ b/ar/contracts/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>إصدار عقود التصدي لكوفيد-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;2:44 م الساعة 23 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;8:56 م الساعة 26 فبراير 2021</p>
           
         </div>
       </div>
@@ -475,7 +475,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>مؤسسة قيصر لخدمات الخطط الصحية ومستشفيات مؤسسة قيصر (خطاب النية): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-letter-of-intent.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li></ul>
+            <ul><li>مؤسسة قيصر لخدمات الخطط الصحية ومستشفيات مؤسسة قيصر (مذكرة تفاهم): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-MOU.pdf">Kaiser-foundation-GovOps-MOU (PDF)</a></li><li>مؤسسة قيصر لخدمات الخطط الصحية ومستشفيات مؤسسة قيصر (خطاب النية): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-letter-of-intent.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li></ul>
 <ul><li>مستشفيات مؤسسة Kaiser، Dignity Health، إدارة الصحة في مقاطعة لوس أنجلوس: <a href="https://files.covid19.ca.gov/pdf/Kaiser-dignity-LA-county-CDPH.pdf">Kaiser-dignity-LA-county-CDPH (PDF)</a></li></ul>
 <ul><li>جامعة ليلاند ستانفورد جونيور (مجلس الأمناء): <a href="https://files.covid19.ca.gov/pdf/Leland-stanford-junior-university-CDT.pdf">Leland-stanford-junior-university-CDT (PDF)</a></li></ul>
 <ul><li>وكالة خدمات التوظيف (LF Staffing Services, Inc): <a href="https://files.covid19.ca.gov/pdf/LF-staffing-services-inc-DSH.pdf">LF-staffing-services-inc-DSH (PDF)</a></li></ul>
