--- a/es/contracts/index.html
+++ b/es/contracts/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contratos de la respuesta a la COVID-19 liberados</h1>
           
-            <p class="small-text">Última actualización&nbsp;23 de febrero de 2021 a las 2:44 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;26 de febrero de 2021 a las 8:56 p. m.</p>
           
         </div>
       </div>
@@ -475,7 +475,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>Kaiser Foundation Health Plan, Inc. y Kaiser Foundation Hospitals (Carta de intención): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-letter-of-intent.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li></ul>
+            <ul><li>Kaiser Foundation Health Plan, Inc. y Kaiser Foundation Hospitals (Memorando de entendimiento): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-MOU.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li><li>Kaiser Foundation Health Plan, Inc. y Kaiser Foundation Hospitals (Carta de intención): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-letter-of-intent.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li></ul>
 <ul><li>Kaiser Foundation Hospitals, Dignity Health, Los Angeles County Department of Health: <a href="https://files.covid19.ca.gov/pdf/Kaiser-dignity-LA-county-CDPH.pdf">Kaiser-dignity-LA-county-CDPH (PDF)</a></li></ul>
 <ul><li>Leland Stanford Junior University (Junta Directiva): <a href="https://files.covid19.ca.gov/pdf/Leland-stanford-junior-university-CDT.pdf">Leland-stanford-junior-university-CDT (PDF)</a></li></ul>
 <ul><li>LF Staffing Services, Inc: <a href="https://files.covid19.ca.gov/pdf/LF-staffing-services-inc-DSH.pdf">LF-staffing-services-inc-DSH (PDF)</a></li></ul>
