--- a/zh-hant/contracts/index.html
+++ b/zh-hant/contracts/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>已發佈的新型冠狀病毒應對合約</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月23日, 下午2:44</p>
+            <p class="small-text">最近更新&nbsp;2021年2月26日, 下午8:56</p>
           
         </div>
       </div>
@@ -475,7 +475,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>Kaiser Foundation Health Plan, Inc.和Kaiser Foundation Hospitals（意向書）：<a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-letter-of-intent.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li></ul>
+            <ul><li>Kaiser Foundation Health Plan, Inc.和Kaiser Foundation Hospitals（諒解備忘錄）：<a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-MOU.pdf">Kaiser-foundation-GovOps-MOU (PDF)</a></li><li>Kaiser Foundation Health Plan, Inc.和Kaiser Foundation Hospitals（意向書）：<a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-letter-of-intent.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li></ul>
 <ul><li>Kaiser Foundation Hospitals, Dignity Health, Los Angeles縣衛生局：<a href="https://files.covid19.ca.gov/pdf/Kaiser-dignity-LA-county-CDPH.pdf">Kaiser-dignity-LA-county-CDPH (PDF)</a></li></ul>
 <ul><li>利蘭·史丹佛大學（董事會）：<a href="https://files.covid19.ca.gov/pdf/Leland-stanford-junior-university-CDT.pdf">Leland-stanford-junior-university-CDT (PDF)</a></li></ul>
 <ul><li>LF Staffing Services, Inc: <a href="https://files.covid19.ca.gov/pdf/LF-staffing-services-inc-DSH.pdf">LF-staffing-services-inc-DSH (PDF)</a></li></ul>
