--- a/vi/contracts/index.html
+++ b/vi/contracts/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Công Bố Hợp Đồng Ứng Phó Với Đại Dịch COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;23 tháng 2, 2021 lúc 14:44</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;26 tháng 2, 2021 lúc 20:56</p>
           
         </div>
       </div>
@@ -477,7 +477,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>Kaiser Foundation Health Plan, Inc. và Kaiser Foundation Hospitals (Thư Tỏ Ý): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-letter-of-intent.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li></ul>
+            <ul><li>Kaiser Foundation Health Plan, Inc. và Kaiser Foundation Hospitals (Biên Bản Ghi Nhớ Hợp Tác): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-MOU.pdf">Kaiser-foundation-GovOps-MOU (PDF)</a></li><li>Kaiser Foundation Health Plan, Inc. và Kaiser Foundation Hospitals (Thư Tỏ Ý): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-letter-of-intent.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li></ul>
 <ul><li>Kaiser Foundation Hospitals, Dignity Health, Sở Y Tế Quận Los Angeles: <a href="https://files.covid19.ca.gov/pdf/Kaiser-dignity-LA-county-CDPH.pdf">Kaiser-dignity-LA-county-CDPH (PDF)</a></li></ul>
 <ul><li>Leland Stanford Junior University (Board of Trustees): <a href="https://files.covid19.ca.gov/pdf/Leland-stanford-junior-university-CDT.pdf">Leland-stanford-junior-university-CDT (PDF)</a></li></ul>
 <ul><li>LF Staffing Services, Inc: <a href="https://files.covid19.ca.gov/pdf/LF-staffing-services-inc-DSH.pdf">LF-staffing-services-inc-DSH (PDF)</a></li></ul>
