Update page - vaccines.html 1271582b8570cc313eb282446be5c3da7b71d007

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 2, 2021 at 2:35 PM</p>
+            <p class="small-text">Last updated&nbsp;March 2, 2021 at 2:45 PM</p>
           
         </div>
       </div>
@@ -188,7 +188,7 @@
 
 
 
-<ul><li><strong><a href="#California's-vaccination-plan">When you can get vaccinated</a></strong></li><li><strong><a href="#How-to-get-vaccinated">How to get vaccinated</a></strong></li><li><strong><a href="#How-vaccines-work">How vaccines work</a></strong></li><li><strong><a href="#What-to-expect-after-vaccination">What to expect after vaccination</a></strong></li><li><strong><a href="#Spread-the-news-about-COVID-19-vaccines">Spread the news about the vaccines</a></strong></li><li><strong><a href="https://as-go-covid19-d-001.azurewebsites.net/wp-admin/post.php?post=7006&amp;action=edit#California-vaccines-dashboard">Vaccination progress dashboards</a></strong></li><li><strong><a href="#Questions-and-answers">Questions and answers</a></strong></li></ul>
+<ul><li><strong><a href="#California's-vaccination-plan">When you can get vaccinated</a></strong></li><li><strong><a href="#How-to-get-vaccinated">How to get vaccinated</a></strong></li><li><strong><a href="#How-vaccines-work">How vaccines work</a></strong></li><li><strong><a href="#What-to-expect-after-vaccination">What to expect after vaccination</a></strong></li><li><strong><a href="#Spread-the-news-about-COVID-19-vaccines">Spread the news about the vaccines</a></strong></li><li><strong><a href="#California-vaccines-dashboard">Vaccination progress dashboards</a></strong></li><li><strong><a href="#Questions-and-answers">Questions and answers</a></strong></li></ul>
 
 
 
@@ -451,7 +451,7 @@
 
 
 
-<ul><li><strong><a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/steps-when-sick.html">Staying home and isolating</a> from others when sick</strong></li><li>Wearing masks </li><li>Washing hands often</li><li>Social distancing and avoiding crowds </li></ul>
+<ul><li><strong><a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/steps-when-sick.html">Staying home and isolating</a> from others when sick</strong></li><li>Wearing masks&nbsp;</li><li>Washing hands often</li><li>Social distancing and avoiding crowds&nbsp;</li></ul>
 
 
 
