--- a/zh-hans/safer-economy/index.html
+++ b/zh-hans/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的经济蓝图</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月2日, 下午5:09</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月3日, 上午7:27</p>
           
         </div>
       </div>
