--- a/pages/wordpress-posts/charts-sandbox.html
+++ b/pages/wordpress-posts/charts-sandbox.html
@@ -31,7 +31,7 @@ addtositemap: false
           <ul class="d-none">
             <li data-label="chartTitle">Vaccines by Dose</li>
             <li data-label="chartDescription">Lorem ipsum chartDescription dose sum</li>
-            <li data-label="legendLabel1">% administerd by dose</li>
+            <li data-label="legendLabel1">% administered by dose</li>
             <li data-label="barLabel">HPI Quartile {N}</li>
             <li data-label="annotationLeast">Least healthy community conditions</li>
             <li data-label="annotationMost">Most healthy community conditions</li>
