Update page - equity.html 76bd94f55b2df4a84a8969b2c368c5312362fccf

--- a/equity/index.html
+++ b/equity/index.html
@@ -499,8 +499,7 @@
 
 
 
-<p class="chart-data-label">Note: Data shown is a 7-day average of positivity rate with a 7-day lag. Data shown is for the 7-day period ending <span data-replacement="d3-lines-report-date"></span>. Health equity quartile positivity is defined as the positivity rate in the lowest 25% of Healthy Places Index census tracts in the county.The health equity metric is not applied to counties with a population less than 106,000.
-</p>
+<p class="chart-data-label">Note: Data shown is a 7-day average of positivity rate with a 7-day lag. Data shown is for the 7-day period ending <span data-replacement="d3-lines-report-date"></span>. Health equity quartile positivity is defined as the positivity rate in the lowest 25% of Healthy Places Index census tracts in the county. The health equity metric is not applied to counties with a population less than 106,000. </p>
 
 
 
