Added top padding to section.

--- a/pages/wordpress-posts/vaccines.html
+++ b/pages/wordpress-posts/vaccines.html
@@ -423,7 +423,7 @@ addtositemap: true
 <!-- end tableau embed  -->
 </div>
 
-<h3>Vaccination by California Healthy Places Index (HPI)</h3>
+<h3 class="pt-5">Vaccination by California Healthy Places Index (HPI)</h3>
 
 <p>The California Healthy Places Index (HPI) is a tool to assist you in exploring local factors that predict life expectancy by comparing community conditions across the state.
 </p>
