--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>News from the Governor&rsquo;s Office</h1>
           
-            <p class="small-text">Last updated&nbsp;March 3, 2021 at 1:07 PM</p>
+            <p class="small-text">Last updated&nbsp;March 3, 2021 at 3:48 PM</p>
           
         </div>
       </div>
@@ -171,6 +171,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--46591 -->March 3, 2021</small></p>
           <div class="card-text" lang="en-US">First-in-the-nation waiver approved by Biden-Harris Administration to allow Medicaid funding for voluntary COVID-19 testing in schools SACRAMENTO – On the heels of announcing a $6.6 billion school reopening agreement wit...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-071.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#341)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--b5d870316c0fbc7b5a52ab429cfc9432 -->March 2, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
