Updated footer text and some other content.

--- a/pages/wordpress-posts/vaccines.html
+++ b/pages/wordpress-posts/vaccines.html
@@ -435,25 +435,27 @@ addtositemap: true
   <div class="row">
       <cagov-chart-vaccines-hpi-by-people class="chart">
         <ul class="d-none">
-          <li data-label="chartTitle">Vaccines by people</li>
+          <li data-label="chartTitle">Vaccines by number of people vaccinated</li>
           <li data-label="chartDescription">People partially and fully vaccinated in California</li>
           <li data-label="legendLabel1">People 16+ partially vaccinated</li>
           <li data-label="legendLabel2">People 16+ fully vaccinated</li>
           <li data-label="barLabel">HPI Quartile {N}</li>
           <li data-label="annotationLeast">Least healthy community conditions</li>
           <li data-label="annotationMost">Most healthy community conditions</li>
+          <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}.</li>
         </ul>
       </cagov-chart-vaccines-hpi-by-people>
   </div>
   <div class="row">
       <cagov-chart-vaccines-hpi-by-dose class="chart">
         <ul class="d-none">
-          <li data-label="chartTitle">Vaccines by Dose</li>
-          <li data-label="chartDescription">Doses administered in California</li>
+          <li data-label="chartTitle">Vaccines by doses administered</li>
+          <li data-label="chartDescription">Number of vaccine doses given in California</li>
           <li data-label="legendLabel1">% of total doses administered</li>
           <li data-label="barLabel">HPI Quartile {N}</li>
           <li data-label="annotationLeast">Least healthy community conditions</li>
           <li data-label="annotationMost">Most healthy community conditions</li>
+          <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}.</li>
         </ul>
       </cagov-chart-vaccines-hpi-by-dose>
   </div>
