--- a/pages/wordpress-posts/vaccines.html
+++ b/pages/wordpress-posts/vaccines.html
@@ -453,7 +453,7 @@ addtositemap: true
         <ul class="d-none">
           <li data-label="chartTitle">Vaccinations by doses administered</li>
           <li data-label="chartDescription">Number of vaccine doses given in California</li>
-          <li data-label="legendLabel1">% of total doses administered</li>
+          <li data-label="legendLabel1">Doses administered</li>
           <li data-label="barLabel">HPI Quartile {N}</li>
           <li data-label="annotationLeast">Least healthy community conditions</li>
           <li data-label="annotationMost">Most healthy community conditions</li>
