Update page - charts-sandbox.html

--- a/pages/wordpress-posts/charts-sandbox.html
+++ b/pages/wordpress-posts/charts-sandbox.html
@@ -34,7 +34,7 @@ addtositemap: false
     <div class="row">
         <cagov-chart-vaccines-hpi-by-people class="chart">
           <ul class="d-none">
-            <li data-label="chartTitle">Vaccines by sand people</li>
+            <li data-label="chartTitle">Vaccines by people</li>
             <li data-label="chartDescription">Lorem ipsum chartDescription people sum</li>
             <li data-label="legendLabel1">People 16+ partially vaccinated</li>
             <li data-label="legendLabel2">People 16+ fully vaccinated</li>
