--- a/pages/wordpress-posts/vaccines.html
+++ b/pages/wordpress-posts/vaccines.html
@@ -423,6 +423,8 @@ addtositemap: true
 <!-- end tableau embed  -->
 </div>
 
+<!-- HPI CHARTS -->
+<!--
 <h3 class="pt-5">Vaccination and community health conditions (Vaccine Equity Metric)</h3>
 
 <p>This graph compares COVID-19 vaccinations among four different levels of community health. </p>
@@ -462,7 +464,10 @@ addtositemap: true
       </cagov-chart-vaccines-hpi-by-dose>
   </div>
 </div>
+-->
+<!-- END HPI CHARTS -->
 
+<!-- GROUP CHARTS -->
 <h3>Vaccination by groups</h3>
 
 
@@ -521,6 +526,8 @@ addtositemap: true
         </cagov-chart-vaccination-groups-gender>
     </div>
 </div>
+
+<!-- END GROUP CHARTS -->
 
 <div class="text-center mb-4">
     <a href="/equity" class="link-arrow-blue">
