--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 3, 2021 sa 4:38 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 4, 2021 sa 9:15 AM</p>
           
         </div>
       </div>
