Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,9 +1,9 @@
 
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong><strong>California sets aside 40% of vaccine doses for most impacted communities</strong></strong></strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong><strong>California sets aside vaccine doses for most impacted communities</strong></strong></strong></strong></h2>
 
 
 
-<p>The state seeks to reach 2 million vaccine doses in those communities to move counties through tiers and open more activities safely.</p>
+<p>The state seeks to reach 2 million vaccinations in those communities to move counties through tiers and open more activities safely.</p>
 
 
 
