Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -3,7 +3,7 @@
 
 
 
-<p>The state seeks to reach 2 million vaccinations in those communities, prioritizing them to safely and sustainably reopen our economy.</p>
+<p>The state seeks to reach 2 million vaccine doses administered in those communities, prioritizing them to safely and sustainably reopen our economy.</p>
 
 
 
