--- a/pages/wordpress-posts/vaccines.html
+++ b/pages/wordpress-posts/vaccines.html
@@ -442,10 +442,10 @@ addtositemap: true
           <li data-label="chartDescription">People partially and fully vaccinated in California</li>
           <li data-label="legendLabel1">People 16+ partially vaccinated</li>
           <li data-label="legendLabel2">People 16+ fully vaccinated</li>
-          <li data-label="barLabel">HPI Quartile {{N}}</li>
+          <li data-label="barLabel">HPI Quartile {N}</li>
           <li data-label="annotationLeast">Least healthy community conditions</li>
           <li data-label="annotationMost">Most healthy community conditions</li>
-          <li data-label="footerText">Updated {{PUBLISHED_DATE}} with data from {{LATEST_ADMINISTERED_DATE}}.  "Partially vaccinated" represents individuals who have received at least one dose of the Pfizer or Moderna vaccine. "Fully vaccinated" represents individuals who have received two doses of the Pfizer or Moderna vaccine, or one dose of the Janssen vaccine. Percentage for number of people calculated as people vaccinated in a quartile divided by population of people 16 years of age and over in a quartile.</li>
+          <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}.  "Partially vaccinated" represents individuals who have received at least one dose of the Pfizer or Moderna vaccine. "Fully vaccinated" represents individuals who have received two doses of the Pfizer or Moderna vaccine, or one dose of the Janssen vaccine. Percentage for number of people calculated as people vaccinated in a quartile divided by population of people 16 years of age and over in a quartile.</li>
         </ul>
       </cagov-chart-vaccines-hpi-by-people>
   </div>
@@ -455,10 +455,10 @@ addtositemap: true
           <li data-label="chartTitle">Vaccinations by doses administered</li>
           <li data-label="chartDescription">Number of vaccine doses given in California</li>
           <li data-label="legendLabel1"> %of total and number of doses administered</li>
-          <li data-label="barLabel">HPI Quartile {{N}}</li>
+          <li data-label="barLabel">HPI Quartile {N}</li>
           <li data-label="annotationLeast">Least healthy community conditions</li>
           <li data-label="annotationMost">Most healthy community conditions</li>
-          <li data-label="footerText">Updated {{PUBLISHED_DATE}} with data from {{LATEST_ADMINISTERED_DATE}}. Excludes doses without an HPI score, including out-of-state residents or records with missing zip codes. Percentage for doses calculated as doses administered in a quartile divided by total doses administered statewide.</li>
+          <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. Excludes doses without an HPI score, including out-of-state residents or records with missing zip codes. Percentage for doses calculated as doses administered in a quartile divided by total doses administered statewide.</li>
         </ul>
       </cagov-chart-vaccines-hpi-by-dose>
   </div>
