--- a/pages/wordpress-posts/vaccines.html
+++ b/pages/wordpress-posts/vaccines.html
@@ -428,7 +428,7 @@ addtositemap: true
 
 <p>This graph compares COVID-19 vaccinations among four different levels of community health. </p>
 
-<p>It uses Healthy Places Index (HPI) measures in a zip code area that can impact health, like income, education, and access to health care. Areas are then given a score, ranging from least healthy community conditions (Quartile 1) to most healthy community conditions (Quartile 4). The Vaccine Equity Metric also creates scores for areas that don’t have an HPI score.
+<p>It uses <a href="http://healthyplacesindex.org/">Healthy Places Index</a> (HPI) measures in a zip code area that can impact health, like income, education, and access to health care. Areas are then given a score, ranging from least healthy community conditions (Quartile 1) to most healthy community conditions (Quartile 4). The Vaccine Equity Metric also creates scores for areas that don’t have an HPI score.
 </p><p>
   Data below show the progress of vaccination in each of the four quartiles. It is updated daily.
 </p>
