--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;March 4, 2021 at 1:49 PM</p>
+            <p class="small-text">Last updated&nbsp;March 4, 2021 at 1:57 PM</p>
           
         </div>
       </div>
@@ -205,7 +205,7 @@
 
 
 
-<p>We’ve set an immediate goal of delivering 2 million vaccine doses to the hardest-hit communities in the state, representing about 25% of eligible Californians. When these 2 million vaccine doses have been administered, the Blueprint for a Safer Economy tiers will be updated to allow for somewhat higher case rates. Learn more about these upcoming changes the CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">Blueprint for a Safer Economy framework</a>.</p>
+<p>We’ve set an immediate goal of reaching 2 million vaccine doses administered to the hardest-hit communities in the state, representing about 25% of eligible Californians. When these 2 million vaccine doses have been administered, the Blueprint for a Safer Economy tiers will be updated to allow for somewhat higher case rates. Learn more about these upcoming changes the CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">Blueprint for a Safer Economy framework</a>.</p>
 
 
 
