--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 4, 2021 sa 2:52 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 4, 2021 sa 2:57 PM</p>
           
         </div>
       </div>
@@ -171,6 +171,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--46621 -->March 4, 2021</small></p>
           <div class="card-text" lang="en-US">State introduces vaccine equity metric to update Blueprint for a Safer Economy based on vaccinating the state’s hardest hit communities against COVID-19 California sets aside 40 percent of vaccine doses for most impacted...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-073.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#342)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--03aabc7c00a5de181d500ed006436f8c -->March 3, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
